[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/omnilaunch/ProfileSelector.gd" type="Script" id=1]
[ext_resource path="res://addons/omnilaunch/OmnilaunchSettings.gd" type="Script" id=2]
[ext_resource path="res://addons/diagraph/resources/theme.tres" type="Theme" id=3]

[node name="OmnilaunchSettings" type="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 206.0
margin_bottom = 226.0
rect_min_size = Vector2( 150, 52.5 )
size_flags_vertical = 3
theme = ExtResource( 3 )
window_title = "Edit Launch Profiles"
resizable = true
script = ExtResource( 2 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -43.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 238.0
margin_bottom = 445.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
margin_right = 238.0
margin_bottom = 27.0

[node name="NewProfile" type="Button" parent="HSplitContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 122.0
margin_bottom = 27.0
text = "New Profile"

[node name="NewWindow" type="Button" parent="HSplitContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 126.0
margin_right = 238.0
margin_bottom = 27.0
text = "New Window"

[node name="Profiles" type="Tree" parent="HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 31.0
margin_right = 238.0
margin_bottom = 445.0
size_flags_vertical = 3
allow_rmb_select = true
hide_root = true
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer"]
margin_left = 246.0
margin_right = 670.0
margin_bottom = 445.0

[node name="WindowBox" type="VBoxContainer" parent="HSplitContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 424.0
margin_bottom = 445.0
size_flags_horizontal = 3
size_flags_vertical = 11
